--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,5 +7,5 @@ loglevel=info
 command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
 
 [program:mongodb]
-command=mongod --port 27017 --bind_ip 127.0.0.1 --dbpath /var/lib/cca/mongo/db --logpath /var/log/cca/mongo.log
+command=mongod --port 27017 --bind_ip 127.0.0.1 --dbpath /var/lib/cca/mongo/db --logpath /var/lib/cca/mongo/mongo.log
 
